# python-ardrone

./: README.md  pyproject.toml  setup.py
ardrone/: client.py  video.py
src/ardrone/: network.py  video.c
