[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "ardrone-sdk"
version = "0.4.3"
description = "A Python library for controlling the Parrot AR.Drone 2.0 over a network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Lily Foster", email = "lily@lily.flowers" },
  { name = "Miguel Villa Florán", email = "miguel.villafloran@gmail.com" },
]
dependencies = ["av", "pillow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Hardware :: Hardware Drivers",
]

[project.urls]
Source = "https://github.com/lilyinstarlight/python-ardrone"
Tracker = "https://github.com/lilyinstarlight/python-ardrone/issues"

[tool.uv.build-backend]
module-name = "ardrone"

[project.scripts]
ardrone-client = "ardrone.client:main"
